fix: improve error handling, more accurate resource types
